<resources>
    <string name="app_name">LWN Reader</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_bar_settings">Add to Favorites</string>
    <string name="nav_header_title">Linux Weekly News</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_announcements">Announcements</string>
    <string name="dialog_commerce">Commerce</string>
    <string name="dialog_development">Development</string>
    <string name="dialog_distributions">Distributions</string>
    <string name="dialog_front">Front</string>
    <string name="dialog_kernel">Kernel</string>
    <string name="dialog_legal">Legal</string>
    <string name="dialog_letters">Letters</string>
    <string name="dialog_press">Press</string>
    <string name="dialog_security">Security</string>
</resources>
